--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form id="input-form">
+		<input type="number" id="block_id" placeholder="enter id(1-9)">
+		<br><br>
+		<input type="text" id="colour_id" placeholder="enter color(red/blue/...)">
+		<br><br>
+		<button type="submit" id="change_button">Change</button>
+		<button type="reset" id="Reset">Reset</button>
+	</from>
+	<br><br>
+	
+	<div id="grid-container">
+	  <div class="grid-item" id="1">1</div>
+	  <div class="grid-item" id="2">2</div>
+	  <div class="grid-item" id="3">3</div>
+	  <div class="grid-item" id="4">4</div>
+	  <div class="grid-item" id="5">5</div>
+	  <div class="grid-item" id="6">6</div>
+	  <div class="grid-item" id="7">7</div>
+	  <div class="grid-item" id="8">8</div>
+	  <div class="grid-item" id="9">9</div>
+	</div>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
