--- a/main.html
+++ b/main.html
@@ -14,11 +14,11 @@
 		<input type="text" id="colour_id" placeholder="enter color(red/blue/...)">
 		<br><br>
 		<button type="submit" id="change_button">Change</button>
-		<button type="reset" id="Reset">Reset</button>
+		<button type="reset" id="reset_button">Reset</button>
 	</from>
 	<br><br>
 	
-	<div id="grid-container">
+	<div id="grid-container" class="grid-container">
 	  <div class="grid-item" id="1">1</div>
 	  <div class="grid-item" id="2">2</div>
 	  <div class="grid-item" id="3">3</div>
